--- a/src/main.css
+++ b/src/main.css
@@ -320,4 +320,5 @@ img {
   bottom: 0;
   left: 0;
   width: 100vw;
+  max-width: 100%;
 }
